---------------------------------------------------------------------------------------------------
Version: 1.2.14
Date: 27. 4. 2025
  Changes:
    - Changed Start with YI Suite option to only start with 25 Yi Constructor robots, made no sense to start with 50 as you only could use 25.
    - Reformat all code using Stylua, attempting to keep this format moving forward as the code is a heavy mix of styles over the years. This should have zero impact to the mod itself just my sanity working on it.
---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: 11. 4. 2025
  Updates:
    - Turrets are now boosted by Space Age Bonus Damage Research
    - Yuoki ammo types now are boosted by Space Age Bonus Damage Research
  Fixes:
    - Cannon Turret Ammo is now named
    - D-ZTT damage type corrected to Laser as it should be, and now is boosted by Laser research Bonus
  Changes:
    - N4 and F7 Crushing with Technic recipes now allow Productivity modules without duplicating the toolhead
    - Improved Dirt Digging recipe now allows Productivity modules without duplicating the drillhead
    - Pure Iron and Copper recipes that boost with toolhead, now allow Productivity modules without duplicating the toolhead
    - Mastercraft Washer now allows for Productivity modules
    - Mastercraft Washer module slots increased to 3 so that it had more than regular Washer
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 5. 4. 2025
  Updates:
    - Code cleanup for Atomics recipes
    - Code cleanup for some recipe/item groups
    - Fixed some of the jarring recipe/item groups that were inconsistent
    - YI E2 Mining Dril (and Mastercraft version) now part of fast replace group of Big mining drill
  Fixes:
    - Fixed up Atomics recipe names
    - Fixed up some of the mess in Factoriopedia
    - Fixed YI Beacon fast replace group
  Changes: