@@ -5,18 +5,20 @@
 # --------------------------------------
 
 [mod-setting-name]
+yuoki-vanilla-overhaul=[color=red](ALPHA!)[/color] Vanilla Overhaul [color=red](ALPHA!)[/color]
 yuoki-prod-mod-behaviour=Yuoki Productivity Module behaviour
 yuoki-start-with-yi-suit=Start game with YI-Suit
 yuoki-inventory-size=Player Inventory Size
 yuoki-player-reach=Player Reach Distance
-yuoki-uc-heavyoil=Heavy oil to Unicomp
+yuoki-uc-heavyoil=[img=item/y-atomic-constructor]Recipe: [img=fluid/heavy-oil]Heavy oil to [img=item/y-unicomp-a2]Unicomp
 
 [mod-setting-description]
-yuoki-prod-mod-behaviour=Defines if Yuoki Productivity modules behave as Vanilla (default) or have no restriction
-yuoki-start-with-yi-suit=Start game with Yuoki Tier 1 Power armour, basic equipment and bots (default False)
-yuoki-inventory-size=Defines player inventory size - min 80 (default) - max 150
-yuoki-player-reach= Defines the extent of Player Reach - min 10 (default) - max 32 (1 chunk)
-yuoki-uc-heavyoil= Enable Heavy oil to Unicomp recipe - true (default) You may want to disable this for balancing reasons with Space Age.
+yuoki-vanilla-overhaul=[color=red]WARNING THIS IS IN ALPHA MODE![/color] \n[color=red]DO NOT USE WITH Space Age![/color] \nUse at your own risk (please share feedback!) \nUpdates may break your factory! \nEnabling this setting will overhaul vanilla recipes with Yuoki items and machines.
+yuoki-prod-mod-behaviour=Defines if Yuoki Productivity modules behave as Vanilla or have no restriction\n\n[color=green]Disabled[/color]\n- Modules act as they do in Vanilla\n\n[color=yellow](Default: Disabled)[/color]
+yuoki-start-with-yi-suit=Start game with Yuoki Tier 1 Power armour, basic equipment and bots\n\n[color=green]Enabled[/color]\nStart with:\n- [img=item/yi_armor_gray]Standard YI Work & Protection Suite\n- [img=item/yi_equip_shield_a]Shield Generator CF-35\n- [img=item/yi_equip_battery_a]EQ-3A Battery\n- [img=item/yi_equip_generator_a]MG-15 -44X-\n- [img=item/yi_equip_roboport]Angelo's Mobile Robot Docking Station\n- [img=item/yi_construction-robot]25x Yi Constuctor\n\n[color=yellow](Default: Disabled)[/color]
+yuoki-inventory-size=Defines player inventory size\n\n[color=green]Minimum value:[/color] 80\n\n[color=green]Maximum value:[/color] 150\n\n[color=yellow](Default: 80)[/color]
+yuoki-player-reach=Defines the extent of Player Reach\n\n[color=green]Minimum value:[/color] 10\n\n[color=green]Maximum value:[/color] 32 (1 chunk)\n\n[color=yellow](Default: 10)[/color]
+yuoki-uc-heavyoil=Enable [img=fluid/heavy-oil]Heavy oil to [img=item/y-unicomp-a2]Unicomp recipe\nYou may want to disable this for balancing reasons with Space Age.\n\n[color=yellow](Default: Enabled)[/color]
 
 # --------------------------------------
 # --------------------------------------
@@ -842,7 +844,7 @@ yi_equip_shield_b=Shield Generator KT-60
 yi_equip_battery_a=EQ-3A Battery
 yi_equip_generator_a=MG-15 -44X-
 yi_equip_legs_a=EXS 27.5+ PL
-yi_equip_roboport=Angelo's Mobile Robot Docking Station 
+yi_equip_roboport=Angelo's Mobile Robot Docking Station
 yi_pld_equipment=KoS - Personal Defense System
 
 [equipment-description]
